# mathic

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  configure.ac  fixspace  replace
include/mathic/: mathic.cpp  mathic.h
src/: mathic.cpp  mathic.h
src/divsim/: DivListModel.h  KDTreeModel.h  Monomial.h  Simulation.cpp  Simulation.h  divMain.cpp  divMain.h  stdinc.h
src/mathic/: BinaryKDTree.h  BitTriangle.h  CliParser.cpp  CliParser.h  ColumnPrinter.cpp  ColumnPrinter.h  ComTree.h  DivList.h  DivMask.cpp  ElementDeleter.cpp  ElementDeleter.h  GeoFront.h  Geobucket.h  HashTable.cpp  HashTable.h  Heap.h  HelpAction.cpp  HelpAction.h  KDEntryArray.h  NameFactory.cpp  NameFactory.h  PackedKDTree.h  PairQueue.cpp  PairQueue.h  TourTree.h  error.cpp  stdinc.h
src/pqsim/: GeobucketModel.h  HeapModel.h  Item.cpp  Item.h  Model.cpp  Model.h  Simulator.cpp  Simulator.h  StlSetModel.h  TourTreeModel.h  pqMain.cpp  pqMain.h  stdinc.h
src/test/: HashTable.cpp  PairQueue.cpp  gtestInclude.cpp
